--- a/Inotki/templates/base/password/password_reset_complete.html
+++ b/Inotki/templates/base/password/password_reset_complete.html
@@ -14,7 +14,7 @@
 
 {% block body_content %}
 
-    <h2>Password reset completed</h2>
+    <h2 class="font-weight-bold text-center title">Password reset completed</h2>
     <div class="alert alert-info">
         Your password has been successfully reset.
     </div>
