--- a/Inotki/templates/base/user_account_activation.html
+++ b/Inotki/templates/base/user_account_activation.html
@@ -13,6 +13,7 @@
 {% endblock %}
 
 {% block body_content %}
+        <img class="logo-pic text-center" src="/static/img/logo.png" alt="logo">
 
     <form method="POST" action="">
         <h2 class="font-weight-bold text-center title">Welcome to Inolii!</h2>
