--- a/Inotki/templates/tags/tag_list.html
+++ b/Inotki/templates/tags/tag_list.html
@@ -37,7 +37,7 @@
                         <p class="task-title">{{ tag.tag_name }}</p>
                     </div>
                 </a>
-                <a class="blue-icon" href="{% url 'tag_delete' tag.id %}"><i class="fa-solid fa-trash-can"></i></a>
+                <a class="blue-icon" href="{% url 'tag_delete' tag.id %}"><i class="fa-solid fa-trash"></i></a>
             </div>
         {% empty %}
             <p class="no-items">No items yet</p>
