--- a/Inotki/templates/base/password/password_reset_confirm.html
+++ b/Inotki/templates/base/password/password_reset_confirm.html
@@ -14,7 +14,7 @@
 
 {% block body_content %}
 
-    <h2>Reset password</h2>
+    <h2 class="font-weight-bold text-center title">Reset password</h2>
 
     <form method="POST" action="">
         {% csrf_token %}
