--- a/Inotki/templates/base/password/password_reset_done.html
+++ b/Inotki/templates/base/password/password_reset_done.html
@@ -14,7 +14,7 @@
 
 {% block body_content %}
 
-    <h2 >Reset password</h2>
+    <h2 class="font-weight-bold text-center title">Reset password</h2>
     <div class="alert alert-info">
         An email has been sent with instructions to reset your password
     </div>
