--- a/Inotki/templates/tasks/task_list.html
+++ b/Inotki/templates/tasks/task_list.html
@@ -36,7 +36,7 @@
                         {{ task.creation_date }} -
                         {{ task.title }} -
                         <a href="{% url 'task_update' task.id %}">edit</a>
-                        <a href="{% url 'task_delete' task.id %}"><i class="fa-solid fa-trash-can"></i></a>
+                        <a href="{% url 'task_delete' task.id %}"><i class="fa-solid fa-trash"></i></a>
                     </li>
                 {% endfor %}
             </ul>
@@ -55,7 +55,7 @@
                             <small>{{ task.date_to_do }}</small>
                         </div>
                     </a>
-                    <a class="alert-icon" href="{% url 'task_delete' task.id %}"><i class="fa-solid fa-trash-can"></i></a>
+                    <a class="alert-icon" href="{% url 'task_delete' task.id %}"><i class="fa-solid fa-trash"></i></a>
                 </div>
             {% endfor %}
         {% endif %}
@@ -73,7 +73,7 @@
                             <small>{{ task.date_to_do }}</small>
                         </div>
                     </a>
-                    <a class="blue-icon" href="{% url 'task_delete' task.id %}"><i class="fa-solid fa-trash-can"></i></a>
+                    <a class="blue-icon" href="{% url 'task_delete' task.id %}"><i class="fa-solid fa-trash"></i></a>
                 </div>
             {% endfor %}
         {% endif %}
@@ -91,7 +91,7 @@
                             <small>{{ task.date_to_do }}</small>
                         </div>
                     </a>
-                    <a class="blue-icon" href="{% url 'task_delete' task.id %}"><i class="fa-solid fa-trash-can"></i></a>
+                    <a class="blue-icon" href="{% url 'task_delete' task.id %}"><i class="fa-solid fa-trash"></i></a>
                 </div>
             {% endfor %}
         {% endif %}
@@ -104,7 +104,7 @@
                 <div class="task">
                     <a class="blue-icon" href="{% url 'task_completed' task.id user.id %}"><i class="fa-regular fa-square"></i></a>
                     <a class="edit" href="{% url 'task_update' task.id %}"><p class="task-title">{{ task.title }}</p></a>
-                    <a class="blue-icon" href="{% url 'task_delete' task.id %}"><i class="fa-solid fa-trash-can"></i></a>
+                    <a class="blue-icon" href="{% url 'task_delete' task.id %}"><i class="fa-solid fa-trash"></i></a>
                 </div>
             {% endfor %}
         {% endif %}
@@ -130,7 +130,7 @@
                     {% endif %}
                     <a class="dark-icon" href="{% url 'task_completed' task.id user.id %}"><i class="fa-regular fa-square-check"></i></a>
                     <a class="edit-completed" href="{% url 'task_update' task.id %}"><p class="task-title">{{ task.title }}</p></a>
-                    <a class="dark-icon" href="{% url 'task_delete' task.id %}"><i class="fa-solid fa-trash-can"></i></a>
+                    <a class="dark-icon" href="{% url 'task_delete' task.id %}"><i class="fa-solid fa-trash"></i></a>
                 </div>
 
             {% empty %}
