--- a/Inotki/static/css/list.css
+++ b/Inotki/static/css/list.css
@@ -64,17 +64,17 @@ form.search-form::after {
 
 /* LIST */
 .title-current{
-  color: rgb(196, 196, 196);
+  color: #333;
   margin-bottom: .9rem;
   margin-top: .3rem;
-  font-family: 'Poppins', sans-serif;
+  font: 1.5em "Poppins-bold";
 }
 
 .title-completed{
-  color: rgb(155, 155, 155);
+  color: #333;
   margin-bottom: .9rem;
   margin-top: .3rem;
-  font-family: 'Poppins', sans-serif;
+  font: 1.5em "Poppins-bold";
 }
 
 h3{
@@ -87,26 +87,20 @@ h3{
 
 .current-task{
   border-radius: 5px 5px 5px 5px;
-  background-color: rgba(231, 231, 231, 0.17);
-  margin-bottom: 1rem;
+  margin-bottom: 1.3rem;
   font-family: "JetBrains Mono", monospace;
-  padding: .5rem .5rem;
-  border: 1px solid rgb(231, 231, 231);
 }
 
 .completed-task{
   border-radius: 5px 5px 5px 5px;
-  background-color: rgba(183, 183, 183, 0.3);
   margin-bottom: 1rem;
   font-family: 'Poppins', sans-serif;
-  padding: .5rem .5rem;
-  border: 1px solid rgba(183, 183, 183, 0.92);
 }
 
 .task{
   padding-left:15px;
   padding-right:15px;
-  border: 1px solid  #4993ff;
+  border: 1px solid rgba(73, 147, 255, 0.39);
   border-radius: 5px 5px 5px 5px;
   margin-bottom: .5rem;
   margin-top: .3rem;
@@ -114,7 +108,14 @@ h3{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: rgba(73, 147, 255, 0.82);
 }
+
+.task:hover{
+  background-color: #4993ff;
+  color: white;
+}
+
 
 .task-completed{
   padding-left:15px;
@@ -127,49 +128,59 @@ h3{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: #696969;
 }
 
-.task a{
-  padding-top: 15px;
-  padding-bottom: 15px;
+.task-completed:hover{
+  background-color: rgb(114, 114, 114);
+  color: white;
 }
 
 .blue-icon{
   font-size: 1.1rem;
-  color: rgba(73, 147, 255, 0.82);
+  color: inherit;
 }
 
 .dark-icon{
   font-size: 1.1rem;
-  color: rgba(114, 114, 114, 0.82);
+  color: inherit;
 }
 
 .edit{
-  color: #4b96ff; /* text color */
-  padding-top: 15px;
-  padding-bottom: 15px;
+  color: inherit; /* text color */
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+}
+
+.edit-n{
+  color: inherit; /* text color */
+  padding-top: 21.5px;
+  padding-bottom: 21.5px;
   text-align: center;
   height: 100%;
   width: 100%;
 }
 
 .alert{
-  color: rgba(255, 0, 0, 0.91);!important;
+  color: rgba(255, 0, 0, 0.49);!important;
 }
 
 .alert-icon{
   font-size: 1.1rem;
-  color: rgb(75, 150, 255);
+  color: inherit;
 }
 
 .edit-completed{
   text-decoration-line: line-through;
-  color: #696969;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  color: inherit;
+  padding-top: 18.5px;
+  padding-bottom: 18.5px;
   text-align: center;
   height: 100%;
-  width: 90%;
+  width: 100%;
 }
 
 .task-title{
@@ -200,12 +211,4 @@ h3{
     width: 7%;
   }
 
-  .current-task{
-    padding: .5rem 1rem;
-
-  }
-
-  .completed-task{
-    padding: .5rem 1rem;
-  }
 }
