--- a/Inotki/templates/notification/notification_list.html
+++ b/Inotki/templates/notification/notification_list.html
@@ -17,7 +17,7 @@
     <div class="current-task">
         <h2 class="title-current">Notification</h2>
         {% if tasks_to_do_late %}
-            <h3>TO DO, Late</h3>
+            <h3><i class="fa-solid fa-truck-fast"></i></h3>
             <!-- LATE -->
             {% for task in tasks_to_do_late %}
                 <div class="task">
@@ -25,6 +25,7 @@
                     <a class="edit" href="{% url 'task_update' task.id %}">
                         <div class="with-date">
                             <p class="task-title">{{ task.title }}</p>
+                            <small>{{ task.date_to_do }}</small>
                         </div>
                     </a>
                 </div>
@@ -33,7 +34,7 @@
 
 
         {% if tasks_to_do_today %}
-            <h3>TO DO, Today</h3>
+            <h3><i class="fa-solid fa-truck"></i></h3>
             <!-- TODAY -->
             {% for task in tasks_to_do_today %}
                 <div class="task">
@@ -41,6 +42,7 @@
                     <a class="edit" href="{% url 'task_update' task.id %}">
                         <div class="with-date">
                             <p class="task-title">{{ task.title }}</p>
+                            <small>{{ task.date_to_do }}</small>
                         </div>
                     </a>
                 </div>
