--- a/Inotki/templates/tags/tag_list.html
+++ b/Inotki/templates/tags/tag_list.html
@@ -40,7 +40,7 @@
                 <a class="blue-icon" href="{% url 'tag_delete' tag.id %}"><i class="fa-solid fa-trash"></i></a>
             </div>
         {% empty %}
-            <p class="no-items">No items yet</p>
+            <p class="no-items">No tags yet</p>
         {% endfor %}
     </div>
 {% endblock %}
