feat: Return to the same location on the page when it is reloaded

--- a/Inotki/static/css/form.css
+++ b/Inotki/static/css/form.css
@@ -42,8 +42,7 @@ button {
 }
 
 h2 {
-  font-family: "JetBrains Mono", monospace;
-  font-size: 40px;
+  font: 2.2em "Poppins-Regular";
   color: #343434;
 }
 
