--- a/Inotki/templates/tags/tag_form.html
+++ b/Inotki/templates/tags/tag_form.html
@@ -4,6 +4,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/content_formatting.css' %}" />
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
 {% endblock %}
 
 {% block title %}
