--- a/Inotki/templates/base/user_update.html
+++ b/Inotki/templates/base/user_update.html
@@ -5,6 +5,7 @@
 {% block css %}
     <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/content_formatting.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/form.css' %}" />
 {% endblock %}
 
 {% block title %}
@@ -12,6 +13,7 @@
 {% endblock %}
 
 {% block body_content %}
+    <h2><a href="{% url 'profile' %}"><i class="fa-solid fa-user"></i> <p>{{ request.user.username }}</p></a></h2>
 
     <form method="POST" action="" enctype="multipart/form-data">
         {% csrf_token %}
@@ -20,7 +22,7 @@
             {{ p_form|crispy  }}
         </fieldset>
         <div class=form-group">
-            <button class="btn" type="submit">Update</button>
+            <button class="blueButton" type="submit">Update</button>
         </div>
     </form>
 {% endblock %}
