--- a/Inotki/templates/main.html
+++ b/Inotki/templates/main.html
@@ -112,7 +112,7 @@
 {% endif %}
 
 <!-- Ilonii -->
-<section  id="content" title="task-manager">
+<section  id="content" title="Inolii : Task and Deadline Tracker">
     <h1 class="d-none">Task manager</h1>
     {% block body_content %}{% endblock %}
 </section>
