--- a/Inotki/templates/base/password/password_reset_confirm.html
+++ b/Inotki/templates/base/password/password_reset_confirm.html
@@ -4,7 +4,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/form.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/user_form.css' %}" />
 {% endblock %}
 
 {% block title %}
