--- a/Inotki/templates/tags/tag_form.html
+++ b/Inotki/templates/tags/tag_form.html
@@ -5,6 +5,7 @@
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/content_formatting.css' %}" />
     <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/form.css' %}" />
 {% endblock %}
 
 {% block title %}
@@ -13,15 +14,14 @@
 
 {% block body_content %}
 
-    <h1>New tag</h1>
-    </p>
+    <h2><a href="{% url 'tags' %}"><i class="fa-solid fa-tag"></i><p>Tag</p></a></h2>
     <form method="POST" action="">
         {% csrf_token %}
         {{ form|crispy }}
         {% if tag.id %}
-            <button type="submit">Update</button>
+            <button type="submit" class="blueButton">Update</button>
         {% else %}
-            <button type="submit">Create</button>
+            <button type="submit" class="blueButton">Create</button>
         {% endif %}
     </form>
 
