--- a/Inotki/templates/main.html
+++ b/Inotki/templates/main.html
@@ -63,7 +63,7 @@
                 <li><a href="{% url 'tasks' %}">Task</a></li>
                 <li><a href="{% url 'tags' %}">Tag</a></li>
                 <li><a href="{% url 'profile' %}">Profile</a></li>
-                <li><a href="{% url 'option_update' %}">Setting</a></li>
+                <li><a href="{% url 'option_update' %}">Settings</a></li>
                 {% if user.is_staff %}
                     <li><a href="/admin">Admin Dashboard</a></li>
                 {% endif %}
