--- a/Inotki/static/css/form.css
+++ b/Inotki/static/css/form.css
@@ -18,18 +18,20 @@ h2 a:hover {
 }
 
 h3{
-    font: 1.1rem "Poppins-bold";
+    font: 1.3rem "Poppins-Regular";
     color: #333;
     margin-bottom: .6rem;
     font-weight: 300;
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-top: 2rem;
+    margin-top: 2.5rem;
 }
 
 form {
     font: .8rem "Poppins-Light";
+    position: relative;
+    z-index: -10;
 }
 
 form small{
