--- a/Inotki/static/css/burger.css
+++ b/Inotki/static/css/burger.css
@@ -6,7 +6,8 @@
         font-size: 2rem;
         color: white;
         cursor: pointer;
-        position: relative;	align-items: center;
+        position: relative;
+        align-items: center;
         z-index: 9999;
     }
 
