--- a/Inotki/static/css/list.css
+++ b/Inotki/static/css/list.css
@@ -88,7 +88,13 @@ form.search-form::after {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 25vw;
+  max-width: 70vw;
+    white-space: nowrap;
+
+}
+
+.maj{
+  text-transform : uppercase;
 }
 
 .tag-button-reset:hover {
@@ -98,12 +104,19 @@ form.search-form::after {
   animation-play-state: paused;
 }
 
+.tag-reset{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
 @keyframes flash {
   0%   {
     background-color: #ff4949;
   }
   40%   {
-    background-color: rgba(255, 73, 73, 0.38);
+    background-color: rgba(255, 73, 73, 0.66);
   }
   100% {
     background-color: #ff4949;
