feat: order by for task list and tag list

--- a/Inotki/templates/tags/tag_delete.html
+++ b/Inotki/templates/tags/tag_delete.html
@@ -11,6 +11,7 @@
 {% endblock %}
 
 {% block body_content %}
+    <h2><a href="{% url 'tags' %}"><i class="fa-solid fa-tag"></i><p>Tag</p></a></h2>
     <h3>Second Thoughts - Retracting Tag Deletion Request</h3>
     <p class="paragraph">After giving it further consideration, would you like to withdraw your request for tag deletion and retain the tag<br>
         <a href="{% url 'tags' %}">go back </a>
