--- a/Inotki/templates/tags/tag_list.html
+++ b/Inotki/templates/tags/tag_list.html
@@ -26,6 +26,12 @@
         <i class="fa-solid fa-square-plus"></i>
     </button>
 
+    <div class="create-button-mobile">
+        <button  onclick="location.href='{% url 'tag_create' %}'">
+            <i class="fa-regular fa-plus"></i>
+        </button>
+    </div>
+
     <div class="current-task">
         <h2 class="title-current">Tags </h2>
 
