--- a/Inotki/static/css/list.css
+++ b/Inotki/static/css/list.css
@@ -1,3 +1,27 @@
+.create-button-mobile {
+  position: fixed;
+  bottom: 4rem;
+  right: 3rem;
+  z-index: 10;
+  border-radius: 50%;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);}
+
+.open .create-button-mobile{
+  z-index: -5;
+  display: none;
+}
+
+.create-button-mobile button{
+  background-color: #4993ff;
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  border: none;
+  cursor: pointer;
+  color: white;
+  font-size: 1.2rem;
+}
+
 .search-form{
   text-align: center;
   margin-bottom: 1rem;
@@ -89,7 +113,7 @@ form.search-form::after {
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 70vw;
-    white-space: nowrap;
+  white-space: nowrap;
 
 }
 
@@ -321,3 +345,10 @@ small{
   }
 
 }
+
+@media all and (min-width: 991px) {
+  .create-button-mobile {
+    display: none;
+  }
+}
+
