--- a/Inotki/static/css/message.css
+++ b/Inotki/static/css/message.css
@@ -1,9 +1,10 @@
 
 /* flash message */
 .toast {
-	position: absolute;
+	position: fixed;
 	top: 20px;
 	right: 30px;
+	z-index: 999;
 	border-radius: 12px;
 	background: #fff;
 	padding: 20px 35px 20px 25px;
