--- a/Inotki/templates/tasks/task_list.html
+++ b/Inotki/templates/tasks/task_list.html
@@ -145,7 +145,7 @@
         {% endfor %}
     </div>
 
-    {% if show_completed_task == True %}
+    {% if user.option.show_completed_task == True %}
         <!-- Completed task -->
         <div class="completed-task">
             <h2 class="title-completed">Completed task </h2>
