--- a/Inotki/static/css/list.css
+++ b/Inotki/static/css/list.css
@@ -1,7 +1,7 @@
 .create-button-mobile {
   position: fixed;
   bottom: 4rem;
-  right: 3rem;
+  right: 2rem;
   z-index: 10;
   border-radius: 50%;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);}
@@ -33,7 +33,7 @@ form.search-form input[type=text] {
   border: 1px solid #4993ff;
   float: left;
   width: 80%;
-  background: #ffffff;
+  background: inherit;
   border-radius: 5px 0 0 5px;
   font-family: 'Poppins', sans-serif;
 }
@@ -179,7 +179,7 @@ form.search-form::after {
 }
 
 .button-create:hover {
-  background: #ffffff;
+  background: inherit;
   color: #4993ff;
 }
 
@@ -221,11 +221,10 @@ h3{
 .task{
   padding-left:15px;
   padding-right:15px;
-  border: 1px solid rgba(73, 147, 255, 0.39);
+  border: 1px solid rgba(73, 147, 255, 0.66);
   border-radius: 5px 5px 5px 5px;
   margin-bottom: .5rem;
   margin-top: .3rem;
-  background-color: rgba(255, 255, 255, 0.94);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -245,7 +244,6 @@ h3{
   border-radius: 5px 5px 5px 5px;
   margin-bottom: .5rem;
   margin-top: .3rem;
-  background-color: rgba(255, 255, 255, 0.94);
   display: flex;
   justify-content: space-between;
   align-items: center;
