--- a/Inotki/templates/base/password/password_reset_done.html
+++ b/Inotki/templates/base/password/password_reset_done.html
@@ -17,7 +17,6 @@
     <div class="alert alert-info">
         An email has been sent with instructions to reset your password
     </div>
-    <p>Don't have an account ? <a href="{% url 'register' %}">Register</a></p>
-    <p>have an account ? <a href="{% url 'login' %}">Sign in</a></p>
+        <p class="font-weight-light">Invalid email address ?<a href="{% url 'password_reset' %}"> Please try again</a></p>
 
 {% endblock %}
